# internal/core/roles/role_handler.go
@@ -6,8 +6,8 @@ import (
 
 	shared "github.com/HasanNugroho/starter-golang/internal/shared/model"
 	"github.com/HasanNugroho/starter-golang/internal/shared/utils"
-	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
+	"github.com/labstack/echo/v4"
 	"gorm.io/gorm"
 )
 
@@ -34,22 +34,23 @@ func NewRoleHandler(rs IRoleService) *RoleHandler {
 // @Failure      500  {object}  shared.Response
 // @Router       /roles [post]
 // @Security ApiKeyAuth
-func (c *RoleHandler) Create(ctx *gin.Context) {
+func (c *RoleHandler) Create(ctx echo.Context) error {
 	var role RoleUpdateModel
 	ctx.Bind(&role)
 	validate := validator.New()
 
 	if err := validate.Struct(role); err != nil {
 		utils.SendError(ctx, 400, "create data failed", err.Error())
-		return
+		return err
 	}
 
 	if err := c.roleService.Create(ctx, &role); err != nil {
 		utils.SendError(ctx, 400, "create data failed", err.Error())
-		return
+		return err
 	}
 
 	utils.SendSuccess(ctx, 201, "roles created successfully", nil)
+	return nil
 }
 
 // FindAllroles godoc
@@ -65,21 +66,22 @@ func (c *RoleHandler) Create(ctx *gin.Context) {
 // @Failure      500     {object}  shared.Response
 // @Router       /roles [get]
 // @Security ApiKeyAuth
-func (c *RoleHandler) FindAll(ctx *gin.Context) {
+func (c *RoleHandler) FindAll(ctx echo.Context) error {
 	var filter shared.PaginationFilter
 
 	// Binding query parameters
-	if err := ctx.ShouldBindQuery(&filter); err != nil {
+	if err := ctx.Bind(&filter); err != nil {
 		utils.SendError(ctx, 400, "failed to fetch roles", err)
-		return
+		return err
 	}
 
 	roles, err := c.roleService.FindAll(ctx, &filter)
 	if err != nil {
 		utils.SendError(ctx, 400, "failed to fetch roles", err)
-		return
+		return err
 	}
 	utils.SendSuccess(ctx, 200, "roles retrieved successfully", roles)
+	return nil
 }
 
 // Findrole godoc
@@ -93,25 +95,26 @@ func (c *RoleHandler) FindAll(ctx *gin.Context) {
 // @Failure      500     {object}  shared.Response
 // @Router       /roles/{id} [get]
 // @Security ApiKeyAuth
-func (c *RoleHandler) FindById(ctx *gin.Context) {
+func (c *RoleHandler) FindById(ctx echo.Context) error {
 	id := ctx.Param("id")
 
 	validate := validator.New()
 	if err := validate.Var(id, "required,ulid"); err != nil {
 		utils.SendError(ctx, 400, "Invalid ID", "ID is not a valid ULID")
-		return
+		return err
 	}
 
 	role, err := c.roleService.FindById(ctx, id)
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			utils.SendError(ctx, 404, fmt.Sprintf("role with ID %s not found", id), err.Error())
-			return
+			return err
 		}
 		utils.SendError(ctx, 500, "Failed to fetch role", err.Error())
-		return
+		return err
 	}
 	utils.SendSuccess(ctx, 200, "role retrieved successfully", role)
+	return nil
 }
 
 // Updaterole godoc
@@ -128,7 +131,7 @@ func (c *RoleHandler) FindById(ctx *gin.Context) {
 // @Failure      500  {object}  shared.Response
 // @Router       /roles/{id} [put]
 // @Security ApiKeyAuth
-func (c *RoleHandler) Update(ctx *gin.Context) {
+func (c *RoleHandler) Update(ctx echo.Context) error {
 	id := ctx.Param("id")
 	var role RoleUpdateModel
 	validate := validator.New()
@@ -137,20 +140,21 @@ func (c *RoleHandler) Update(ctx *gin.Context) {
 
 	if err := validate.Var(id, "required,ulid"); err != nil {
 		utils.SendError(ctx, 400, "Invalid ID", "ID is not a valid ULID")
-		return
+		return err
 	}
 
 	if err := validate.Struct(role); err != nil {
 		utils.SendError(ctx, 400, "Bad request", err.Error())
-		return
+		return err
 	}
 
 	if err := c.roleService.Update(ctx, id, &role); err != nil {
 		utils.SendError(ctx, 400, "create data failed", err)
-		return
+		return err
 	}
 
 	utils.SendSuccess(ctx, 201, "roles updated successfully", nil)
+	return nil
 }
 
 // Deleterole godoc
@@ -164,22 +168,23 @@ func (c *RoleHandler) Update(ctx *gin.Context) {
 // @Failure      500     {object}  shared.Response
 // @Router       /roles/{id} [delete]
 // @Security ApiKeyAuth
-func (c *RoleHandler) Delete(ctx *gin.Context) {
+func (c *RoleHandler) Delete(ctx echo.Context) error {
 	id := ctx.Param("id")
 
 	validate := validator.New()
 
 	if err := validate.Var(id, "required,ulid"); err != nil {
 		utils.SendError(ctx, 400, "Invalid ID", "ID is not a valid ULID")
-		return
+		return err
 	}
 
 	err := c.roleService.Delete(ctx, id)
 	if err != nil {
 		utils.SendError(ctx, 400, "failed to delete role", err)
-		return
+		return err
 	}
 	utils.SendSuccess(ctx, 200, "role deleted successfully", nil)
+	return nil
 }
 
 // Assignrole godoc
@@ -195,22 +200,23 @@ func (c *RoleHandler) Delete(ctx *gin.Context) {
 // @Failure      500  {object}  shared.Response
 // @Router       /roles/assign [post]
 // @Security ApiKeyAuth
-func (c *RoleHandler) AssignUser(ctx *gin.Context) {
+func (c *RoleHandler) AssignUser(ctx echo.Context) error {
 	var payload AssignRoleModel
 	ctx.Bind(&payload)
 	validate := validator.New()
 
 	if err := validate.Struct(payload); err != nil {
 		utils.SendError(ctx, 400, "Assign user failed", err.Error())
-		return
+		return err
 	}
 
 	if err := c.roleService.AssignUser(ctx, &payload); err != nil {
 		utils.SendError(ctx, 400, "Assign user failed", err.Error())
-		return
+		return err
 	}
 
 	utils.SendSuccess(ctx, 201, "Assign user successfully", nil)
+	return nil
 }
 
 // UnAssignrole godoc
@@ -224,22 +230,23 @@ func (c *RoleHandler) AssignUser(ctx *gin.Context) {
 // @Failure      400  {object}  shared.Response
 // @Failure      404  {object}  shared.Response
 // @Failure      500  {object}  shared.Response
-// @Router       /roles/Unassign [post]
+// @Router       /roles/unassign [post]
 // @Security ApiKeyAuth
-func (c *RoleHandler) UnAssignUser(ctx *gin.Context) {
+func (c *RoleHandler) UnAssignUser(ctx echo.Context) error {
 	var payload AssignRoleModel
 	ctx.Bind(&payload)
 	validate := validator.New()
 
 	if err := validate.Struct(payload); err != nil {
 		utils.SendError(ctx, 400, "UnAssign user failed", err.Error())
-		return
+		return err
 	}
 
 	if err := c.roleService.UnassignUser(ctx, &payload); err != nil {
 		utils.SendError(ctx, 400, "UnAssign user failed", err.Error())
-		return
+		return err
 	}
 
 	utils.SendSuccess(ctx, 201, "UnAssign user successfully", nil)
+	return nil
 }
